--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.submit %>
 <% end %>
 <%#  %>
-<form action=" " method="post">
-  <input type="text" name=" " value=" ">
+<form action="/songs" method="post">
+  <input type="text" name="songs[title]" value=" ">
   <input type="submit" value="Create song">
 </form>
